2018-12-29  Carl Hetherington  <cth@carlh.net>

	* Version 2.12.15 released.

2018-12-19  Carl Hetherington  <cth@carlh.net>

	* Version 2.12.14 released.

2018-10-26  Carl Hetherington  <cth@carlh.net>

	* Version 2.12.13 released.

2018-10-08  Carl Hetherington  <cth@carlh.net>

	* Fix bad parsing of ASS lines embedded into FFmpeg files
	and containing commas.

2018-09-25  Carl Hetherington  <cth@carlh.net>

	* Version 2.12.12 released.

2018-06-08  Carl Hetherington  <cth@carlh.net>

	* Version 2.12.11 released.

2018-09-04  Carl Hetherington  <cth@carlh.net>

	* Version 2.12.10 released.

2018-04-27  Carl Hetherington  <cth@carlh.net>

	* Fix obscured subtitles in some cases.

2018-04-25  Carl Hetherington  <cth@carlh.net>

	* Version 2.12.9 released.

2018-07-18  Carl Hetherington  <cth@carlh.net>

	* Add command-line option to specify directory containing config (#1284).

2018-04-27  Carl Hetherington  <cth@carlh.net>

	* Version 2.12.8 released.

2018-06-07  Carl Hetherington  <cth@carlh.net>

	* Version 2.12.7 released.

2018-05-23  Carl Hetherington  <cth@carlh.net>

	* Fix failure to load image files with non-ASCII names.

	* Version 2.12.6 released.

2018-05-15  Carl Hetherington  <cth@carlh.net>

	* Fix missing burnt-in / previewed subtitles containing ampersands.

	* Fix slow exports from DCP content (#1285).

2018-05-15  Carl Hetherington  <cth@carlh.net>

	* Fix incorrect subtitle positioning in a VF when there are more than
	two consecutive reels with no subtitles.

2018-05-15  Carl Hetherington  <cth@carlh.net>

	* Version 2.12.5 released.

2018-05-08  Carl Hetherington  <cth@carlh.net>

	* Look at subtitle colour and effect when deciding whether or not to
	re-make video (should fix #1290).

2018-05-07  Carl Hetherington  <cth@carlh.net>

	* Fix invalid timings in SMPTE subtitle files (causing failure to play subtitles)
	in some cases (#1293).

2018-04-19  Carl Hetherington  <cth@carlh.net>
