@@ -1,3 +1,9 @@
+2019-01-15  Carl Hetherington  <cth@carlh.net>
+
+	* Add --encrypt/-e option to dcpomatic_create.
+
+	* Fix crash in dcpomatic2_create when using templates.
+
 2018-12-29  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.12.15 released.
